fix: risolto bug mancata delete event